buck-out/log/2022-03-06_08h27m55s_buildcommand_51b008e9-62b9-4c27-8ceb-9d75a085a257/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.0s
CREATING ACTION GRAPH: FINISHED IN 0.1s
src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:35: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = _data[x][y];
                          ~~~~~~~~^~
2 errors generated.
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 4.7s 10/9 JOBS, 3 UPDATED

Top slow rules
    //:cg: 3.6s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-canvas.cpp.o90b2484d,default/ppandcompile.argsfile]

stderr: src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:35: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = _data[x][y];
                          ~~~~~~~~^~
2 errors generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-canvas.cpp.o90b2484d,default.
